# firebird

./: .gitignore  CHANGELOG.md  CMakeLists.txt  autogen.sh  configure.ac  vcpkg-configuration.json
doc/: README.IPv6  (+20 more)
src/: CMakeLists.txt
src/alice/: alice.cpp  alice.h  alice_meta.epp  alice_proto.h  aliceswi.h  exe.cpp  tdr.cpp
src/auth/: SecDbCache.h
src/auth/SecureRemotePassword/: srp.h
src/auth/SecurityDatabase/: LegacyHash.h  LegacyManagement.epp  LegacyServer.cpp
src/auth/trusted/: AuthSspi.cpp  AuthSspi.h
src/burp/: BurpTasks.cpp  BurpTasks.h  OdsDetection.epp  OdsDetection.h  backup.epp  burp.cpp  burp.h  burp_proto.h  burpswi.h  canonical.cpp  mvol.cpp  restore.epp
src/burp/split/: spit.cpp  spit.h
src/common/: Auth.cpp  CRC32C.cpp  CsConvert.h  CvtFormat.cpp  DecFloat.cpp  DecFloat.h  Int128.cpp  Int128.h  IntlParametersBlock.cpp  IntlParametersBlock.h  IntlUtil.cpp  IntlUtil.h  MsgMetadata.cpp  MsgMetadata.h  ParserTokens.h  SimilarToRegex.cpp  SimilarToRegex.h  StatementMetadata.cpp  StatementMetadata.h  StatusArg.cpp  StatusArg.h  StdHelper.h  Task.cpp  Task.h  TextType.cpp  TextType.h  ThreadStart.cpp  ThreadStart.h  TimeZoneUtil.cpp  TimeZoneUtil.h  TimeZones.h  Tokens.cpp  Tokens.h  UtilSvc.cpp  UtilSvc.h  call_service.cpp  common.h  cvt.cpp  cvt.h  db_alias.cpp  (+25 more)
src/common/classes/: BatchCompletionState.h  BlobWrapper.cpp  BlobWrapper.h  BlrReader.h  ByteChunk.h  ClumpletReader.cpp  ClumpletReader.h  ClumpletWriter.cpp  ClumpletWriter.h  DbImplementation.cpp  DbImplementation.h  DoublyLinkedList.h  File.h  FpeControl.h  GenericMap.h  Hash.cpp  Hash.h  ImplementHelper.cpp  ImplementHelper.h  InternalMessageBuffer.cpp  MetaString.cpp  MetaString.h  MsgPrint.cpp  NestConst.h  NoThrowTimeStamp.cpp  NoThrowTimeStamp.h  QualifiedMetaString.h  RefCounted.h  SafeArg.cpp  SafeArg.h  Spinlock.h  Switches.cpp  Switches.h  SyncObject.cpp  Synchronize.cpp  Synchronize.h  TempFile.cpp  TempFile.h  TimerImpl.cpp  TimerImpl.h  (+25 more)
src/common/config/: ConfigCache.cpp  ConfigCache.h  config.cpp  config.h  config_file.cpp  config_file.h  dir_list.cpp
src/common/ipc/: IpcChat.h  IpcMessage.h  IpcNamedSignal.h  IpcSharedSignal.h
src/common/os/: guid.h  mod_loader.h  os_utils.h  path_utils.h
src/common/sha2/: sha2.cpp  sha2.h
src/common/tests/: CommonTest.cpp  CvtTest.cpp  StringTest.cpp
src/dbs/: security.sql
src/dsql/: AggNodes.cpp  AggNodes.h  BlrDebugWriter.cpp  BoolNodes.cpp  BoolNodes.h  DSqlDataTypeUtil.h  DdlNodes.epp  DdlNodes.h  DsqlBatch.cpp  DsqlBatch.h  DsqlCompilerScratch.cpp  DsqlCompilerScratch.h  DsqlCursor.cpp  DsqlCursor.h  DsqlRequests.cpp  DsqlRequests.h  DsqlStatementCache.cpp  DsqlStatements.cpp  DsqlStatements.h  ExprNodes.cpp  ExprNodes.h  Keywords.cpp  Keywords.h  NodePrinter.h  Nodes.h  PackageNodes.epp  PackageNodes.h  Parser.cpp  Parser.h  StmtNodes.cpp  StmtNodes.h  WinNodes.cpp  btyacc_fb.ske  chars.h  ddl.cpp  ddl_proto.h  dsql.cpp  dsql.h  errd.cpp  errd_proto.h  (+9 more)
src/extlib/: ib_util.cpp
src/gpre/: CMakeLists.txt  c_cxx.cpp  cmd.cpp  cme.cpp  cmp.cpp  exp.cpp  gpre.cpp  gpre.h  gpre_proto.h  hsh.cpp  int_cxx.cpp  obj_cxx.cpp  par.cpp  par_proto.h  parse.h  pat.cpp  sqe.cpp  sql.cpp  sql_proto.h
src/gpre/languages/: ada.cpp  cob.cpp  fbrmclib.cpp  ftn.cpp  pas.cpp  rmc.cpp
src/gpre/std/: gpre_meta.epp
src/include/: fb_blk.h  fb_exception.h  fb_pthread.h  fb_types.h
src/include/cross/: android.arm64  android.arme  android.x86  android.x86_64
src/include/firebird/: FirebirdInterface.idl  IdlFbInterfaces.h  Interface.h  Message.h  TimeZones.h  ibase.h  iberror.h
src/intl/: lc_narrow.cpp  lc_narrow.h  ld.h
src/intl/charsets/: cs_737.h  cs_869.h  cs_iso8859_7.h  cs_w1253.h
src/intl/utils/: dtest.c  mapgen4.c
src/iscguard/: cntl_guard.cpp  iscguard.cpp  iscguard.h
src/isql/: FrontendLexer.cpp  FrontendParser.cpp  FrontendParser.h  extra_proto.h  extract.epp  isql.epp  isql.h  isql_proto.h  isqlswi.h  iutils.cpp  iutils_proto.h  main.cpp  show.epp  show_proto.h
src/isql/tests/: FrontendParserTest.cpp
src/jrd/: Attachment.cpp  Attachment.h  BlobUtil.cpp  BlobUtil.h  CacheVector.cpp  CacheVector.h  CharSetContainer.h  Collation.cpp  Collation.h  ConfigTable.cpp  CryptoManager.cpp  CryptoManager.h  Database.cpp  Database.h  DbCreators.cpp  DebugInterface.cpp  DebugInterface.h  EngineInterface.h  ExtEngineManager.cpp  ExtEngineManager.h  Function.epp  Function.h  GarbageCollector.h  InitCDSLib.cpp  InitCDSLib.h  IntlManager.cpp  IntlManager.h  LocalTemporaryTable.h  Mapping.cpp  Mapping.h  MetaName.cpp  MetaName.h  Monitoring.cpp  Monitoring.h  PreparedStatement.cpp  ProfilerManager.cpp  ProfilerManager.h  ProtectRelations.h  QualifiedName.h  Record.h  (+130 more)
src/jrd/extds/: ExtDS.cpp  ExtDS.h  InternalDS.cpp  InternalDS.h  IscDS.cpp  IscDS.h  ValidatePassword.cpp  ValidatePassword.h
src/jrd/optimizer/: InnerJoin.cpp  Optimizer.cpp  Optimizer.h  OuterJoin.cpp  Retrieval.cpp
src/jrd/os/: pio.h  pio_proto.h
src/jrd/recsrc/: AggregatedStream.cpp  BitmapTableScan.cpp  BufferedStream.cpp  ConditionalStream.cpp  Cursor.cpp  ExternalTableScan.cpp  FilteredStream.cpp  FirstRowsStream.cpp  FullOuterJoin.cpp  FullTableScan.cpp  HashJoin.cpp  IndexTableScan.cpp  LocalTableStream.cpp  LockedStream.cpp  MergeJoin.cpp  NestedLoopJoin.cpp  ProcedureScan.cpp  RecordSource.cpp  RecordSource.h  RecursiveStream.cpp  SingularStream.cpp  SkipRowsStream.cpp  SortedStream.cpp  TableValueFunctionScan.cpp  Union.cpp  VirtualTableScan.cpp  WindowedStream.cpp
src/lock/: lock.cpp  lock_proto.h  print.cpp
src/misc/: codes.epp  writeBuildNum.sh
src/msgs/: build_file.cpp
src/remote/: CMakeLists.txt  SockAddr.h  inet.cpp  parser.cpp  proto_proto.h  protocol.cpp  protocol.h  remot_proto.h  remote.cpp  remote.h  remote_def.h
src/utilities/: CMakeLists.txt  analyse.cpp  drop.cpp
src/yvalve/: MasterImplementation.cpp  MasterImplementation.h  PluginManager.cpp  PluginManager.h  YObjects.h  alt.cpp  array.cpp  blob.cpp  gds.cpp  gds_proto.h  msg.h  perf.cpp  perf.h  prepa_proto.h  preparse.cpp  user_dsql.cpp  utl.cpp  utl_proto.h  why.cpp
(+347 files in other folders)
